err/bpluspy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/BplusPy'...
Compiling './lib/python3.5/site-packages/BplusPy/BplusTree.py'...
***   File "./lib/python3.5/site-packages/BplusPy/BplusTree.py", line 33
    raise BplusTreeKeyMissing, "key not found "+key
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/BplusPy/BplusTreeBytes.py'...
***   File "./lib/python3.5/site-packages/BplusPy/BplusTreeBytes.py", line 31
    raise BplusTreeException, "buffernumber seen twice "+repr(buffernumber)
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/BplusPy/BplusTreeLong.py'...
***   File "./lib/python3.5/site-packages/BplusPy/BplusTreeLong.py", line 34
    raise BplusTreeException, "inner and outer buffer sizes should match "+repr(
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/BplusPy/BufferFile.py'...
***   File "./lib/python3.5/site-packages/BplusPy/BufferFile.py", line 39
    raise BufferFileException, "buffer size too small %s<%s"%(this.buffersize,MINBUFFERSIZE)
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/BplusPy/LinkedFile.py'...
***   File "./lib/python3.5/site-packages/BplusPy/LinkedFile.py", line 49
    raise LinkedFileException, "bad header prefix"
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/BplusPy/hBplusTree.py'...
***   File "./lib/python3.5/site-packages/BplusPy/hBplusTree.py", line 35
    raise BplusTreeKeyMissing, "key not found "+key
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/BplusPy/testing.py'...
***   File "./lib/python3.5/site-packages/BplusPy/testing.py", line 14
    print "exercise", i,j
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/BplusPy/xBplusTree.py'...
***   File "./lib/python3.5/site-packages/BplusPy/xBplusTree.py", line 35
    raise BplusTreeKeyMissing, "key not found "+key
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/BplusPy/xBplusTreeBytes.py'...
***   File "./lib/python3.5/site-packages/BplusPy/xBplusTreeBytes.py", line 52
    raise BplusTreeException, "empty bucket loaded"
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/BplusPy-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
